--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   },
   "homepage": "https://github.com/atulkkale/to-do#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
     "joi": "^17.8.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1"
   }
 }
