--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "swagger-ui-express": "^4.6.2"
   }
 }
