--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
     "otp-generator": "^4.0.1",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2"
   }
 }
