--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a To-Do app that allows users to create and manage their tasks.",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "prod": "cross-env NODE_ENV=production node app.js"
   },
   "repository": {
     "type": "git",
