--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "build": "node app.js",
     "prod": "cross-env NODE_ENV=production node app.js"
   },
   "repository": {
