--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "build": "node app.js",
-    "prod": "cross-env NODE_ENV=production node app.js"
+    "prod": "node app.js"
   },
   "repository": {
     "type": "git",
